examples/default-gw-test.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: Same
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw-override
  annotations:
    gateway.kgateway.dev/gateway-parameters-name: "gw-params"
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: Same
