examples/example-aws-upstream.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: http
  namespace: kgateway-system
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin
  namespace: httpbin
  labels:
    app: httpbin
spec:
  hostnames:
  - "www.example.com"
  parentRefs:
  - name: http
    namespace: kgateway-system
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: httpbin
      kind: Service
      namespace: httpbin
      port: 8000
  - matches:
    - path:
        type: Exact
        value: /lambda/1
    backendRefs:
    - name: lambda
      kind: Upstream
      group: gateway.kgateway.dev
      namespace: httpbin
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.kgateway.dev
          kind: Parameter
          name: tim-test
  - matches:
    - path:
        type: Exact
        value: /lambda/2
    backendRefs:
    - name: lambda
      kind: Upstream
      group: gateway.kgateway.dev
      namespace: httpbin
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.kgateway.dev
          kind: Parameter
          name: echo-test
