examples/repro-2.yaml
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-route
spec:
  parentRefs:
    - name: gw
      kind: Gateway
      namespace: default
      sectionName: http
  rules:
    - matches:
        - path:
            value: /
            type: PathPrefix
      backendRefs:
        - name: ext-proc-grpc
          port: 4444
